--- a/src/main/resources/static/view/dashboard.html
+++ b/src/main/resources/static/view/dashboard.html
@@ -62,8 +62,8 @@
             </div>
 
             <div class="body">
-                <canvas id="doughnut" class="chart chart-doughnut" chart-colors="colors"
-                        chart-data="data" chart-labels="labels">
+                <canvas id="doughnut" class="chart chart-doughnut" chart-colors="colorsPizza"
+                        chart-data="dadosPizza" chart-labels="labelsPizza">
                 </canvas>
             </div>
         </div>
