--- a/src/main/resources/static/view/funcionarios.html
+++ b/src/main/resources/static/view/funcionarios.html
@@ -54,7 +54,7 @@
                             <label for="email">Email</label>
                             <div class="form-group">
                                 <div class="form-line">
-                                    <input type="text" id="email" class="form-control"  ng-model="funcionarios.email" placeholder="Email do funcionario">
+                                    <input type="email" id="email" class="form-control"  ng-model="funcionarios.email" placeholder="Email do funcionario">
                                 </div>
                             </div>
                         </div>
@@ -64,7 +64,7 @@
                             <b>CPF</b>
                             <div class="input-group">
                                 <div class="form-line">
-                                    <input type="text" class="form-control key" placeholder="000.000.000-00"
+                                    <input type="text" class="form-control key" ui-mask="999.999.999-99"
                                            ng-required="true" ng-minlength="5" ng-model="funcionarios.cpf">
                                 </div>
                             </div>
@@ -97,7 +97,7 @@
                             <b>Telefone</b>
                             <div class="input-group">
                                 <div class="form-line">
-                                    <input id="phone1" type="text" class="form-control mobile-phone-number" placeholder="(00) 0000-0000"
+                                    <input id="phone1" type="text" class="form-control mobile-phone-number" ui-mask="(99) 9999-9999"
                                            ng-required="true" ng-minlength="5" ng-model="funcionarios.telefone1">
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                             <div class="input-group">
                                 <div class="form-line">
                                     <input id="phone2" type="text" class="form-control mobile-phone-number"
-                                           ng-required="true" ng-minlength="5" placeholder="(00) 9 0000-0000" ng-model="funcionarios.telefone2">
+                                           ng-required="true" ng-minlength="5" ui-mask="(99) 99999-9999"  ng-model="funcionarios.telefone2">
                                 </div>
                             </div>
                         </div>
