--- a/src/main/resources/static/view/funcionarios.html
+++ b/src/main/resources/static/view/funcionarios.html
@@ -74,8 +74,8 @@
                             <label for="cargos">Cargo</label>
                             <div class="form-group">
                                 <div class="form-line">
-                                    <select class="form-control show-tick" name="cargos" id="cargos" ng-model="funcionario.cargo">
-                                        <option ng-repeat="cg in cargos" value="{{cg}}">{{cg.descricao}}</option>
+                                    <select class="form-control show-tick" name="cargos" id="cargos" ng-model="funcionario.cargo.id">
+                                        <option ng-repeat="cg in cargos" value="{{cg.id}}">{{cg.descricao}}</option>
                                     </select>
                                 </div>
                             </div>
