--- a/src/main/resources/static/view/dashboard.html
+++ b/src/main/resources/static/view/dashboard.html
@@ -57,7 +57,7 @@
         <div class="card">
             <div class="header">
                 <h2>
-                    QUANTIDADE DE DOAÇÕES EM CADA STATUS
+                    QUANTIDADE DE DOAÇÕES POR STATUS
                 </h2>
             </div>
 
