--- a/src/main/resources/static/view/cep.html
+++ b/src/main/resources/static/view/cep.html
@@ -56,7 +56,8 @@
                 <div class="form-group">
                     <div class="form-line">
                         <input type="text" id="numero" class="form-control" ng-required="true"
-                               ng-model="funcionarios.numeroResidencia" placeholder="Nº" >
+                               ng-model="funcionario.numeroResidencia" placeholder="Nº" >
+                               {{funcionario.numeroResidencia}}
                     </div>
                 </div>
             </div>
@@ -65,7 +66,8 @@
                 <div class="form-group">
                     <div class="form-line">
                         <input type="text" id="complemento" class="form-control" ng-required="true"
-                               ng-model="funcionarios.complementoResidencia" placeholder="Complemento">
+                               ng-model="funcionario.complementoResidencia" placeholder="Complemento">
+                               {{funcionario.complementoResidencia}}
                     </div>
                 </div>
             </div>
